@@ -715,7 +715,6 @@ void FCEUD_PrintError(const char *errormsg)
 DUMMY(FCEUD_HideMenuToggle)
 DUMMY(FCEUD_SaveStateAs)
 DUMMY(FCEUD_LoadStateFrom)
-DUMMY(FCEUD_MovieRecordTo)
 DUMMY(FCEUD_MovieReplayFrom)
 DUMMY(FCEUD_ToggleStatusIcon)
 DUMMY(FCEUD_AviRecordTo)
